--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'static_alert/css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'static_alert/css/alert_form.css' %}">
     <link rel="stylesheet" href="{% static 'static_alert/css/contact_form.css' %}">
+    <link rel="stylesheet" href="{% static 'static_alert/css/watch_ads.css' %}">
     {% block link%} {%endblock%}
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
