--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="{% static 'static_alert/css/alert_form.css' %}">
     <link rel="stylesheet" href="{% static 'static_alert/css/contact_form.css' %}">
     {% block link%} {%endblock%}
+    
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link href='https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css' rel='stylesheet'>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
@@ -66,6 +69,8 @@
                 <a class="a4_navbar-profil" href="/login">
                     <img src="{% static 'static_alert/assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
+                <span>Hello, {{request.user}}</span>
+                <span><a href="{% url 'logout' %}">Logout</a></span>
             </div>
         </nav>
     </div>
