--- a/website/all4animals/static/static_alert/css/footer.css
+++ b/website/all4animals/static/static_alert/css/footer.css
@@ -2,7 +2,9 @@ footer{
     height: 100px;
     width: 100%;
     height: 10vh;
-    background: #78c2ad; 
+    background: #78c2ad;
+    position: fixed;
+    bottom: 0;
 }
 
 .a4_footer div{
