--- a/website/all4animals/static/static_housing/css/login.css
+++ b/website/all4animals/static/static_housing/css/login.css
@@ -1,100 +1,56 @@
-.a4_login{ 
-    width: 25%;
-    margin: auto;
-    border: 5px solid #fcd5ba;
-    border-radius: 25px;
-}
-
-.a4_registration{
-    background: cadetblue;
-}
-
-.a4_login_registration{
-    display: none;
-}
-
-.a4_login .a4_menu_login ul li{
-    font-size: 1.6em;
-    flex-grow: 2;
-    padding-top: 20px;
-    padding-bottom: 20px;
+.user_card {
+    width: 350px;
+    margin-top: auto;
+    margin-bottom: auto;
+    background: #74cfbf;
+    position: relative;
     display: flex;
     justify-content: center;
-    border-radius: 0 19px 0 0;
-}
-
-.a4_login .a4_menu_login ul li:first-of-type{
-    border-radius: 19px 0 0 0;
-}
-
-.a4_login .a4_menu_login ul{
-    text-decoration: none;
-    list-style: none;
-    display: flex;
-}
-
-.a4_login .a4_container_login{
-    width: 70%;
-    margin: auto;
-    display: flex;
     flex-direction: column;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+
 }
 
-.a4_container_login input::placeholder{
-    font-weight: normal;
+.form_container {
+    margin-top: 20px;
 }
 
-.a4_container_login button{
-    width: 30%;
-    margin-bottom: 10px!important;
+#form-title{
+    color: #fff;
+    
 }
 
-.a4_container_login .a4_block_login{
-    display: flex;
-    flex-direction: column;
+.login_btn {
+    width: 100%;
+    background: #33ccff !important;
+    color: white !important;
+}
+.login_btn:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
+}
+.login_container {
+    padding: 0 2rem;
+}
+.input-group-text {
+    background: #f7ba5b !important;
+    color: white !important;
+    border: 0 !important;
+    border-radius: 0.25rem 0 0 0.25rem !important;
+}
+.input_user,
+.input_pass:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
 }
 
-.a4_container_login div {
-    margin-top: 5px;
-    margin-bottom: 0!important;
-}
-
-.a4_block_login button{
-    margin: auto;
-}
-
-.a4_email_pseudo{
-    display: flex;
-}
-
-.a4_email_pseudo div:first-of-type{
-    flex-grow: 2;
-    margin-right: 5px;
-}
-
-.a4_address{
-    display: flex;
-    justify-content: space-between;
-}
-
-.a4_password .a4_block_login, .a4_address .a4_block_login {
-    width: 45%;
-}
-
-/* CSS ABOUT MOBILE ONLY */
-@media (max-width: 991px) {
-    .a4_login{
-        width: 80%;
-    }
-    .a4_container_login button{
-        width: 50%;
-    }
-    .a4_email_pseudo, .a4_address{
-        flex-direction: column;
-    }
-
-    .a4_block_login{
-        width: 100%!important;
-    }
-
+#messages{
+    background-color: grey;
+    color: #fff;
+    padding: 10px;
+    margin-top: 10px;
 }
