--- a/website/all4animals/static/static_alert/css/alert_user.css
+++ b/website/all4animals/static/static_alert/css/alert_user.css
@@ -2,6 +2,9 @@
 .a4_all_container{
     margin-left: 20%;
     margin-right: 20%;
+    border-left: thick double black;
+    border-right: thick double black;
+
 }
 
 .a4_container{
