--- a/website/all4animals/alert/templates/alert/alert_detail.html
+++ b/website/all4animals/alert/templates/alert/alert_detail.html
@@ -43,6 +43,8 @@ Detail d'une alerte
     <br/>
     <br/>
     <br/>
+    <a href=""></a><div class="button_contact"> Contacter </div>
+
 </div>
 
 
