--- a/website/all4animals/alert/templates/alert/alert_user.html
+++ b/website/all4animals/alert/templates/alert/alert_user.html
@@ -13,7 +13,7 @@ Parcourir annonce
 {% block body%} 
 <h2> Parcourir les annonces </h2>
 <div class="a4_all_container">
-    <div class="a4_container"> 
+    <div class="a4_container_alert"> 
         {%for alert in alert_user%}
             <div class="a4_element">
                 <a href="{% url 'alert:choix_alert' alert.id %}" >
