--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -69,8 +69,11 @@
                 <a class="a4_navbar-profil" href="/login">
                     <img src="{% static 'static_alert/assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
                 </a>
-                <span>Hello, {{request.user}}</span>
-                <span><a href="{% url 'logout' %}">Logout</a></span>
+                {% if user.is_authenticated %}
+                <a class="a4_navbar-profil" href="{% url 'logout' %}">
+                    <img src="{% static 'static_alert/assets/nav_footer/logout_logo.png' %}" alt="logo All4animals" title="Logout">
+                </a>
+                {% endif %}
             </div>
         </nav>
     </div>
