--- a/website/all4animals/static/static_alert/css/nav.css
+++ b/website/all4animals/static/static_alert/css/nav.css
@@ -15,7 +15,7 @@ nav li {
 }
 
 nav li a {
-    color:white;
+    color: white;
 }
 
 nav li a:hover {
@@ -23,76 +23,68 @@ nav li a:hover {
     text-decoration: line;
 }
 
-.a4_menu_web{
-    width: 70%;
+.a4_menu_web {
+    width: 60%;
     float: left;
 }
 
 
-
-
 /* CSS ABOUT PC ONLY */
-@media (min-width: 992px) {
 
+@media (min-width: 992px) {
     nav ul {
         display: flex;
         justify-content: center;
-    }   
-    
+    }
     .a4_logo-nav {
         width: 20%;
         float: left;
         padding-left: 20px;
     }
-    
     .a4_logo-nav img {
         height: 20vh;
         width: auto;
         border: 4px solid white;
         border-radius: 50%;
     }
-
     .a4_nav_avatar {
-        width: 10%;
+        width: 20%;
         float: left;
         height: 10vh;
+        display: flex;
     }
-    
     .a4_nav_avatar img {
         width: 20%;
         margin: 15%;
     }
-
-    .a4_menu_web{
+    .a4_menu_web {
         height: 10vh;
         line-height: 10vh;
     }
-
-    nav li {   
+    nav li {
         font-size: 2.5vh;
         margin-right: 70px;
     }
-
     .a4_menu_mobil {
         display: none;
     }
 }
 
+
 /* CSS ABOUT MOBILE ONLY */
+
 @media (max-width: 991px) {
     .a4_logo-nav {
         width: 20%;
         float: left;
         padding-left: 20px;
     }
-    
     .a4_logo-nav img {
         height: 16vh;
         width: auto;
         border: 1px solid white;
         border-radius: 50%;
     }
-    
     .a4_nav_avatar {
         width: 10%;
         float: left;
@@ -100,36 +92,29 @@ nav li a:hover {
         line-height: 8vh;
         padding-right: 4px;
     }
-    
     .a4_nav_avatar img {
         width: 80%;
         margin: 20%;
     }
-
-    nav{
+    nav {
         height: 8vh;
     }
-
-    .a4_menu_web{
+    .a4_menu_web {
         display: none;
     }
-
     .a4_menu_mobil {
         width: 70%;
         float: left;
         line-height: 8vh;
     }
-
     .a4_block_burger {
         float: right;
         height: 8vh;
     }
-    
     .a4_menu_mobil img {
         height: 3vh;
         margin: auto;
     }
-
     .a4_menu_show {
         display: none;
         position: absolute;
@@ -139,18 +124,15 @@ nav li a:hover {
         left: 0;
         height: 21vh;
     }
-
     .a4_menu_show ul li {
         width: 100%;
         height: 7vh;
         border-bottom: 1px solid white;
         line-height: 7vh;
     }
-
     .a4_menu_show ul li:first-of-type {
         border-top: 1px solid white;
     }
-
     .a4_menu_show ul li a {
         margin-left: 5vh;
     }
