--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -66,12 +66,16 @@
                 </div>
             </div>
             <div class="a4_nav_avatar">
+                {% if user.is_authenticated %}
+                <a class="a4_navbar-profil" href="/login">
+                    <img src="{{request.user.customer.profile_pic.url}}" alt="logo All4animals" title="Logo">
+                </a>
+                <a class="a4_navbar-profil bar_logout" href="{% url 'logout' %}">
+                    <img class="nav_logout" src="{% static 'static_alert/assets/nav_footer/logout_logo.png' %}" alt="logo All4animals" title="Logout">
+                </a>
+                {% else %}
                 <a class="a4_navbar-profil" href="/login">
                     <img src="{% static 'static_alert/assets/nav_footer/profil.png' %}" alt="logo All4animals" title="Logo">
-                </a>
-                {% if user.is_authenticated %}
-                <a class="a4_navbar-profil" href="{% url 'logout' %}">
-                    <img src="{% static 'static_alert/assets/nav_footer/logout_logo.png' %}" alt="logo All4animals" title="Logout">
                 </a>
                 {% endif %}
             </div>
