--- a/website/all4animals/registration/templates/registration/login.html
+++ b/website/all4animals/registration/templates/registration/login.html
@@ -24,7 +24,7 @@ Login
             <div class="d-flex justify-content-center">
 
 
-                <h3 id="form-title">LOGIN</h3>
+                <h3 id="form-title">Connexion</h3>
             </div>
             <div class="d-flex justify-content-center form_container">
                 <form method="POST" action="">
