--- a/website/all4animals/registration/templates/registration/register.html
+++ b/website/all4animals/registration/templates/registration/register.html
@@ -21,7 +21,7 @@ Register
     <div class="d-flex justify-content-center h-100">
         <div class="user_card">
             <div class="d-flex justify-content-center">
-                <h3 id="form-title">REGISTER ACCOUNT</h3>
+                <h3 id="form-title">S'enregistrer</h3>
             </div>
             <div class="d-flex justify-content-center form_container">
                 <form method="POST" action="">
