--- a/website/all4animals/static/static_alert/css/nav.css
+++ b/website/all4animals/static/static_alert/css/nav.css
@@ -54,9 +54,30 @@ nav li a:hover {
         display: flex;
     }
     .a4_nav_avatar img {
-        width: 20%;
-        margin: 15%;
+        height: 100%;
     }
+
+    .a4_navbar-profil {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-top: 15px;
+    }
+
+    .bar_logout {
+        width: 40px;
+        height: 40px;
+        margin-top: 25px;
+        margin-left: 20px;
+    }
+
+    .nav_logout {
+        height: 100% !important;
+        border-radius: 0 !important ;
+        margin-left: 0 !important;
+    }
+
     .a4_menu_web {
         height: 10vh;
         line-height: 10vh;
