--- a/website/all4animals/alert/templates/alert/alert_find.html
+++ b/website/all4animals/alert/templates/alert/alert_find.html
@@ -11,7 +11,7 @@ Parcourir annonce
 {%endblock%}
 
 {% block body%} 
-<h2> Parcourir les annonces </h2>
+<h2> Animaux trouvé et aperçu </h2>
 <div class="a4_all_container">
     <div class="a4_container_alert"> 
         {%for alert in alert_user%}
