--- a/website/all4animals/alert/templates/alert/alert_lost.html
+++ b/website/all4animals/alert/templates/alert/alert_lost.html
@@ -5,6 +5,8 @@
 
 {% block link%} 
 <link rel="stylesheet" href="{% static 'static_alert/css/alert_user.css' %}">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Potta+One&display=swap" rel="stylesheet">
 {%endblock%}
 
 {% block title%} 
@@ -12,10 +14,12 @@ Parcourir annonce
 {%endblock%}
 
 {% block body%} 
-<h2> Animaux perdu </h2>
+
 
 
 <div class="a4_all_container">
+    <h2> Animaux perdu </h2>
+    <br/>
     <div>
         <div class="card card-body div_form">
             <form action="" method="GET">
@@ -50,4 +54,3 @@ Parcourir annonce
     </div>
 </div>
 {%endblock%}
-<img src="" alt="">
