--- a/website/all4animals/alert/templates/alert/alert_find.html
+++ b/website/all4animals/alert/templates/alert/alert_find.html
@@ -1,9 +1,13 @@
 {% extends 'alert/base.html' %}
 {% load static %}
+{% load widget_tweaks %}
+
 
 
 {% block link%} 
 <link rel="stylesheet" href="{% static 'static_alert/css/alert_user.css' %}">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Potta+One&display=swap" rel="stylesheet">
 {%endblock%}
 
 {% block title%} 
@@ -11,13 +15,31 @@ Parcourir annonce
 {%endblock%}
 
 {% block body%} 
-<h2> Animaux trouvé et aperçu </h2>
 <div class="a4_all_container">
+    <h2> Animaux trouvé et aperçu </h2>
+    <br/>
+    <div class="card card-body div_form form_filter">
+        <form action="" method="GET">
+            <div class="filter">
+                <label for="filter">Animal</label>
+                {% render_field my_filter.form.type_animal class="ad" %}
+            </div>
+            <div class="filter">
+                <label for="filter">Sexe</label>
+                {% render_field my_filter.form.gender class="ad" %}
+            </div>
+            <div class="filter">
+                <label for="filter">Couleur</label>
+                {% render_field my_filter.form.color class="ad" %}
+            </div>
+            <button class='btn btn-primary' type="submit"> Rechercher</button>
+        </form>
+    </div>
     <div class="a4_container_alert"> 
         {%for alert in alert_user%}
             <div class="a4_element">
                 <a href="{% url 'alert:choix_alert' alert.id %}" >
-                    <h3>{{alert.type_alert}}</h3>
+                    <h3>{{alert.type_animal}} {{alert.type_alert}}</h3>
                     <img src="{{alert.img.url}}" alt="image {{alert.type_animal}}"/>
                     <p>{{alert.city}}</p>
                     <p>{{alert.date}}</p>
