[FIX] format date to input

--- a/website/all4animals/alert/templates/alert/create_alert.html
+++ b/website/all4animals/alert/templates/alert/create_alert.html
@@ -48,7 +48,7 @@ Alerte
             </div>
             <div class="date">
                 <label for="">Date</label>
-                {% render_field form.date class="input" %}
+                {% render_field form.date class="input" type="date" %}
             </div>
         </div>
         <div class="formulaire">
