[IMP] add an ignore to media filed

--- a/website/all4animals/alert/templates/alert/alert_detail.html
+++ b/website/all4animals/alert/templates/alert/alert_detail.html
@@ -40,6 +40,7 @@ Detail d'une alerte
             <p>{{object.city}}</p>
         </div>
     </div>
+    <a href="mailto:{{object.email}}" class="btn btn-primary">Contact</a>
     <br/>
     <br/>
     <br/>
