[WIP] refonte home

--- a/website/all4animals/alert/templates/alert/alert_detail.html
+++ b/website/all4animals/alert/templates/alert/alert_detail.html
@@ -11,6 +11,11 @@ Detail d'une alerte
 {%endblock%}
 
 {% block body%}
+{% if object.type_animal.type == "Perdu"%}
+    <a class="btn btn-info" href="../../annonce_perdu/#{{object.img}}"> Retour</a>
+{%else%}
+    <a class="btn btn-info" href="../../annonce_trouver/#{{object.img}}"> Retour</a>
+{%endif%}
 <br/>
 <div class="a4_container_alert">
     <div class="title_alert">
@@ -41,6 +46,7 @@ Detail d'une alerte
         </div>
     </div>
     <br/>
+    <a href="mailto:{{object.email}}" class="btn btn-primary">Contact</a>
     <br/>
     <br/>
     
