--- a/website/all4animals/alert/templates/alert/index.html
+++ b/website/all4animals/alert/templates/alert/index.html
@@ -4,6 +4,8 @@
 
 {% block link%} 
 <link rel="stylesheet" href="{% static 'static_alert/css/index.css' %}">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
 {%endblock%}
 
 {% block title%}
@@ -12,55 +14,62 @@ Index
 
 
 {% block body%}
-<section>
-    <br>
-    <br class="space">
-    <br class="space">
-    <div class="a4_all_alert">
-        <div class="a4_container_home">
-            <a href="/alerte">
-                <div class="a4_writing">
-                    <img src="{% static 'static_alert\assets\home\alert\alert.png' %}" alt="writing'alert" title="Alerte">
-                </div>
-                <br>
-                <div class="a4_container_img_alert">
-                    <img src="{% static 'static_alert\assets\home\alert\dog.png' %}" alt="dog" title="Alerte">
-                    <img src="{% static 'static_alert\assets\home\alert\warning.png' %}" alt="warning" title="Alerte">
-                    <img src="{% static 'static_alert\assets\home\alert\cat.png' %}" alt="cat'alart" title="Alerte">
-                </div>    
-            </a>
+<br/>
+<div class="all_container">
+    <div class="container1">
+        <div class="leftbox">
+            <img class="big_pic" src="{% static 'static_alert/assets/alerte/all_pet.png' %}" alt="">
         </div>
-
-        <br class="space"></br>
-        <a href="\annonce">
-            <div class="a4_container_home">
-                <div class="a4_writing">
-                    <img src="{% static 'static_alert\assets\home\ad\writing.png' %}" alt="writing'ad" title="Alerte">
-                </div>
-                <br>
-                <div class="a4_container_img_alert">
-                    <img src="{% static 'static_alert\assets\home\ad\lost.png' %}" alt="lost" title="publication">
-                    <img src="{% static 'static_alert\assets\home\ad\see.png' %}" alt="see" title="publication">
-                    <img src="{% static 'static_alert\assets\home\ad\find.png' %}" alt="find" title="publication">
-                </div>
+        <div class="rightbox">
+            <div class="top-border"></div>
+            <h1>Aidez-nous à les retrouver</h1>
+            <p class="paragraph1">Nous avons cherché different problème que les animaux sont amenés à avoir et qui pourrait être évité grace aux bons outils, et parmi ceux que nous avons pu identifier, nous avons choisi de centrer notre projet autour de la disparition des animaux domestiques.</p>
+            <br/>
+            <br/>
+            <p class="paragraph2">Nous avons donc décidé de dédier ce site « All4animals » pour les personnes qui ont trouvé un animal perdu et pour les propriétaires d’animaux dont l’animal a disparu. Le site a été conçu pour aider à retrouver les animaux perdus, les utilisateurs ayant perdu leur animal peuvent poster une annonce avec les critères de l’animal. Le site permet aussi le référencement de toutes les annonces des animaux trouvés ou perdus.</p>
+            <div class="bottom-border">
+                <div class="left-border"></div>
+                <img class ="border-img" src="{% static 'static_alert/assets/alerte/arrow.png' %}" alt="">
+                <div class="right-border"></div>
             </div>
-        </a>
-        <br class="space"></br>
-        <a href="\hebergement">
-            <div class="a4_container_home">
-                <div class="a4_writing">
-                    <img src="{% static 'static_alert\assets\home\housing\writing.png' %}" alt="writing'ad" title="Alerte">
-                </div>
-                <br>
-                <div class="a4_container_img_alert">
-                    <img src="{% static 'static_alert\assets\home\housing\profil.png' %}" alt="profil" title="hébergement">
-                    <img src="{% static 'static_alert\assets\home\housing\house.png' %}" alt="house" title="hébergement">
-                    <img src="{% static 'static_alert\assets\home\housing\dog.png' %}" alt="dog" title="hébergement">
-                </div>
-            </div>
-        </a>
-        <br class="space"></br>
+        </div>
     </div>
 
-</section>
+    <div class="container2">
+        <div class="leftbox">
+            <a href="/annonce_perdu"><img src="{% static 'static_alert/assets/alerte/dog.png' %}" alt=""></a>
+            <h3>Perdu</h3>
+            <p>Consulter les annonces des animaux perdus</p>
+        </div>
+        <div class="centerbox">
+            <a href="/alerte"><img src="{% static 'static_alert/assets/alerte/cat_dog.jpg' %}" alt=""></a>
+            <h3>Alerte</h3>
+            <p>Créer une annonce</p> 
+        </div> 
+        <div class="rightbox">
+            <a href="/annonce_trouver"><img src="{% static 'static_alert/assets/alerte/cat.png' %}" alt=""></a>
+            <h3>Trouvé</h3>
+            <p>Consulter les annonces des animaux trouvés</p> 
+        </div> 
+    </div>
+
+    <h2 class="title3">Nos belles histoires</h2>
+    <div class="container3">
+        <div class="leftbox">
+            <div class="pic"><img src="{% static 'static_alert/assets/alerte/bouvier_bernois.jpg' %}" alt=""></div>
+            <div class="text">
+                <h3>L'histoire de Bonnie</h3>
+                <p>Bonnie a pris peur lorsqu'elle a entendu un klaxon, je n'ai pas pu la suivre et penser l'avoir perdu... Après des heures de recherches j'ai consulté le site internet et je l'ai retrouvée chez une famille qui l'avait prise sous son toit.</p>
+            </div>
+        </div>  
+        
+        <div class="rightbox">
+            <div class="pic"><img src="{% static 'static_alert/assets/alerte/cat2.png' %}" alt=""></div>
+            <div class="text">
+                <h3>L'histoire de Mune</h3>
+                <p>J'ai trouvé ce chat en allant faire un jogging, au début je ne pouvais pas l'approcher puis en lui donnant de la nourriture il est venu vers moi. J'ai pu le prendre en photo et l'aider à retrouver sa famille grace à All4animals !</p>
+            </div>
+        </div>
+    </div>
+</div>
 {%endblock%}
