--- a/website/all4animals/static/static_alert/css/alert_user.css
+++ b/website/all4animals/static/static_alert/css/alert_user.css
@@ -1,6 +1,6 @@
 
 h2{
-    font-size: 4em!important;
+    font-size: 100%;
     text-align: center;
     font-family: 'Potta One', cursive!important;
     background: #fcd5ba;
@@ -36,11 +36,11 @@ form{
 
 .a4_element{
     width: 30%;
+    height: 30%!important;
     margin:1%;
     box-shadow: 5px 5px 5px 5px  darkgray;
     border-radius: 15px;
     text-align: center;
-
 }
 
 .a4_element p{
@@ -53,7 +53,39 @@ h3, p{
 }
 
 .a4_element img{
-    width : 90%;
-    height: 65%;
+    width: 100%;
 }
 
+.box_img{
+    width: 90%;
+    height: 12em;
+    overflow: hidden;
+    margin: auto;
+}
+
+.paginator a{
+    font-size: 20px;
+    color: black;
+}
+
+@media (max-width: 991px) {
+    .filter{
+        width: 180%!important;
+    }
+
+    .form_filter form{
+        display: inline;
+        margin: auto;
+    }
+    .form_filter form div{
+        width:100%;
+    }
+    .a4_container_alert{
+        display: inline;
+    }
+    .a4_container_alert div{
+        width: 100%;
+        position: relative;
+    }
+
+}
