[FIX] fix min height

--- a/website/all4animals/alert/templates/alert/base.html
+++ b/website/all4animals/alert/templates/alert/base.html
@@ -94,7 +94,9 @@
     <br>
     <br>
     <br>
-    {% block body%} {%endblock%}
+    <div class="block_min_height">
+        {% block body%} {%endblock%}
+    </div>
     <footer class="a4_footer">
         <div class="a4_block_menu">
             <ul>
