[IMP] change the structure of the project

--- a/website/all4animals/registration/templates/registration/login.html
+++ b/website/all4animals/registration/templates/registration/login.html
@@ -1,6 +1,6 @@
 
 
-{% extends 'alert/base.html' %}
+{% extends 'core/base.html' %}
 {% load static %}
 
 
@@ -55,7 +55,7 @@ Login
     
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                    Don't have an account? <a href="../register" class="ml-2">Sign Up</a>
                 </div>
         
             </div>
