--- a/website/all4animals/alert/templates/alert/alert_detail.html
+++ b/website/all4animals/alert/templates/alert/alert_detail.html
@@ -1,4 +1,4 @@
-{% extends 'alert/base.html' %}
+{% extends 'core/base.html' %}
 {% load static %}
 
 
@@ -11,10 +11,10 @@ Detail d'une alerte
 {%endblock%}
 
 {% block body%}
-{% if object.type_animal.type == "Perdu"%}
-    <a class="btn btn-info" href="../../annonce_perdu/#{{object.img}}"> Retour</a>
+{% if object.type_alert.id == 1 %}
+    <a class="btn btn-info" href="../../annonce_perdu"> Retour</a>
 {%else%}
-    <a class="btn btn-info" href="../../annonce_trouver/#{{object.img}}"> Retour</a>
+    <a class="btn btn-info" href="../../annonce_trouver"> Retour</a>
 {%endif%}
 <br/>
 <div class="a4_container_alert">
@@ -45,8 +45,6 @@ Detail d'une alerte
             <p>{{object.city}}</p>
         </div>
     </div>
-    <a href="mailto:{{object.email}}" class="btn btn-primary">Contact</a>
-    <br/>
     <a href="mailto:{{object.email}}" class="btn btn-primary">Contact</a>
     <br/>
     <br/>
