--- a/website/all4animals/alert/templates/alert/create_alert.html
+++ b/website/all4animals/alert/templates/alert/create_alert.html
@@ -1,4 +1,4 @@
-{% extends 'alert/base.html' %}
+{% extends 'core/base.html' %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -81,5 +81,6 @@ Alerte
 </div>
 </fieldset>
 </form>
+<br>
 </div>
 {%endblock%}
