--- a/website/all4animals/alert/templates/alert/index.html
+++ b/website/all4animals/alert/templates/alert/index.html
@@ -23,10 +23,11 @@ Index
         <div class="rightbox">
             <div class="top-border"></div>
             <h1>Aidez-nous à les retrouver</h1>
-            <p class="paragraph1">Nous avons cherché different problème que les animaux sont amenés à avoir et qui pourrait être évité grace aux bons outils, et parmi ceux que nous avons pu identifier, nous avons choisi de centrer notre projet autour de la disparition des animaux domestiques.</p>
+            <p class="paragraph1"> De nos jours, plusieurs dizaines de milliers d'animaux domestique sont perdu chaque années, c'est en partant de ce triste constat que le site "All4Animals" a été développé.</p>
             <br/>
+            <p class="paragraph2">Grâce a cet outil vous pouvez VOUS aussi apporter votre contribution a la réduction de ce triste chiffre, car oui chaque personne peut amener sa contribution à sa hauteur, partant de ceci, un question se pose : "Pourquoi pas vous ?"</p>
             <br/>
-            <p class="paragraph2">Nous avons donc décidé de dédier ce site « All4animals » pour les personnes qui ont trouvé un animal perdu et pour les propriétaires d’animaux dont l’animal a disparu. Le site a été conçu pour aider à retrouver les animaux perdus, les utilisateurs ayant perdu leur animal peuvent poster une annonce avec les critères de l’animal. Le site permet aussi le référencement de toutes les annonces des animaux trouvés ou perdus.</p>
+            <p class="paragraph2">Si vous trouvez ou voyez un animal qui semble perdu, AIDEZ le à retrouver sa maison en le déclarant sur notre site. Si vous vous ête concerné par la perte de votre animal, cet animal qui vous est cher vous attend peut être au bout d'une annonce</p>
             <div class="bottom-border">
                 <div class="left-border"></div>
                 <img class ="border-img" src="{% static 'static_alert/assets/alerte/arrow.png' %}" alt="">
