--- a/website/all4animals/alert/templates/alert/alert_lost.html
+++ b/website/all4animals/alert/templates/alert/alert_lost.html
@@ -39,10 +39,10 @@ Parcourir annonce
         </form>
     </div>
     <div class="a4_container_alert"> 
-        {%for alert in alert_user%}
+        {%for alert in page_obj%}
             <div class="a4_element" id="{{alert.img}}">
                 <a href="{% url 'alert:choix_alert' alert.id %}" >
-                    <h3>{{alert.type_alert}}</h3>
+                    <h3>{{alert.type_animal}} {{alert.type_alert}}</h3>
                     <div class="box_img"><img src="{{alert.img.url}}" alt="image {{alert.type_animal}}"/></div>
                     <p>{{alert.city}}</p>
                     <p>{{alert.date}}</p>
