[ADD} redirect after create ad

--- a/website/all4animals/core/templates/core/index.html
+++ b/website/all4animals/core/templates/core/index.html
@@ -48,7 +48,7 @@ Index
             <p>Créer une annonce</p> 
         </div> 
         <div class="rightbox">
-            <a href="/annonce_trouver"><img src="{% static 'static_alert/assets/alerte/cat.png' %}" alt=""></a>
+            <a href="/annonce_trouver"><img src="{% static 'static_alert/assets/alerte/cat.png' %}" alt="Photo chat"></a>
             <h3>Trouvé</h3>
             <p>Consulter les annonces des animaux trouvés</p> 
         </div> 
@@ -57,7 +57,7 @@ Index
     <h2 class="title3">Nos belles histoires</h2>
     <div class="container3">
         <div class="leftbox">
-            <div class="pic"><img src="{% static 'static_alert/assets/alerte/bouvier_bernois.jpg' %}" alt=""></div>
+            <div class="pic"><img src="{% static 'static_alert/assets/alerte/bouvier_bernois.jpg' %}" alt="Photo chien"></div>
             <div class="text">
                 <h3>L'histoire de Bonnie</h3>
                 <p>Bonnie a pris peur lorsqu'elle a entendu un klaxon, je n'ai pas pu la suivre et penser l'avoir perdu... Après des heures de recherches j'ai consulté le site internet et je l'ai retrouvée chez une famille qui l'avait prise sous son toit.</p>
@@ -65,7 +65,7 @@ Index
         </div>  
         
         <div class="rightbox">
-            <div class="pic"><img src="{% static 'static_alert/assets/alerte/cat2.png' %}" alt=""></div>
+            <div class="pic"><img src="{% static 'static_alert/assets/alerte/cat2.jpg' %}" alt="Photo chat"></div>
             <div class="text">
                 <h3>L'histoire de Mune</h3>
                 <p>J'ai trouvé ce chat en allant faire un jogging, au début je ne pouvais pas l'approcher puis en lui donnant de la nourriture il est venu vers moi. J'ai pu le prendre en photo et l'aider à retrouver sa famille grace à All4animals !</p>
