--- a/website/all4animals/alert/templates/alert/create_alert.html
+++ b/website/all4animals/alert/templates/alert/create_alert.html
@@ -12,7 +12,7 @@ Alerte
 
 {% block body%}
 <div class="container a4_container">
-    <form action="/alerte/" method="POST" class="a4_containt_form" enctype="multipart/form-data">
+    <form action="" method="POST" class="a4_containt_form" enctype="multipart/form-data">
         <h1>Créer une annonce</h1>
         <br/>
         <br/>
