--- a/website/all4animals/core/templates/core/base.html
+++ b/website/all4animals/core/templates/core/base.html
@@ -101,8 +101,8 @@
         <div class="a4_block_menu">
             <ul>
                 <li><a href="/alerte">Créer une annonce</a></li>
-                <li><a href="/annonce">Parcourir les annonces</a></li>
-                <li><a href="/hebergement">Hébergement</a></li>
+                <li><a href="/annonce_trouver">Annonce trouvé</a></li>
+                <li><a href="/annonce_perdu">Annonce perdu</a></li>
             </ul>
         </div>
         <div class="a4_block_logo">
@@ -129,8 +129,8 @@
         </div>
         <div class="a4_block_contact">
             <ul>
-                <li><a href="/contact">Nous contacter</a></li>
-                <li><a href="/annonce">Conditions générales</a></li>
+                <li><a href="mailto:all4animals@outlook.fr">Nous contacter</a></li>
+                <li><a href="">Conditions générales</a></li>
             </ul>
 
         </div>
