--- a/website/all4animals/alert/templates/alert/alert_find.html
+++ b/website/all4animals/alert/templates/alert/alert_find.html
@@ -38,7 +38,7 @@ Parcourir annonce
     <div class="a4_container_alert"> 
         {%for alert in page_obj%}
             <div class="a4_element" id="{{alert.img}}">
-                <a href="{% url 'alert:choix_alert' alert.id %}" >
+                <a href="{% url 'alert:detail_alert' alert.id %}" >
                     <h3>{{alert.type_animal}} {{alert.type_alert}}</h3>
                     <div class="box_img"><img src="{{alert.img.url}}" alt="image {{alert.type_animal}}"/></div>
                     <p>{{alert.city}}</p>
