--- a/website/all4animals/registration/templates/registration/login.html
+++ b/website/all4animals/registration/templates/registration/login.html
@@ -43,7 +43,7 @@ Login
                     </div>
 
                         <div class="d-flex justify-content-center mt-3 login_container">
-                            <input class="btn login_btn" type="submit" value="Login">
+                            <input class="btn login_btn" type="submit" value="Inscription">
                         </div>
                 </form>
 
@@ -55,7 +55,7 @@ Login
     
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account? <a href="../register" class="ml-2">Sign Up</a>
+                    Vous n'avez pas de compte ? <a href="../register" class="ml-2">S'inscrire</a>
                 </div>
         
             </div>
