--- a/website/all4animals/registration/templates/registration/register.html
+++ b/website/all4animals/registration/templates/registration/register.html
@@ -52,7 +52,7 @@ Register
                     </div>
 
                     <div class="d-flex justify-content-center mt-3 login_container">
-                        <input class="btn login_btn" type="submit" value="Register Account">
+                        <input class="btn login_btn" type="submit" value="Enregistrer">
                     </div>
                 </form>
             </div>
@@ -61,7 +61,7 @@ Register
 
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
-                    Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+                    Vous avez deja un compte ? <a href="{% url 'login' %}" class="ml-2">Connexion</a>
                 </div>
             </div>
         </div>
